compiler/tests/en/errors/match_pattern_type_mismatch.salam
// EXPECT: E021
func main:
    x := 5
    match x:
        "hello" =>: println "greeting" end
        else =>: println "other" end
    end
end
